[tool.poetry]
name = "giraycoskun-github-io"
version = "0.1.0"
description = "Github Projects Landing Page"
authors = ["giraycoskun <giraycoskun@sabanciuniv.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "giraycoskun"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.3.1"
mkdocs-material = "^8.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
